# OCR_App

./: CMakeLists.txt  OcrApp.cpp  OcrApp.h  README.md  main.cpp
